--- a/kid-sleeper/angular.json
+++ b/kid-sleeper/angular.json
@@ -67,6 +67,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+			        "port": 2501
+          },
           "configurations": {
             "production": {
               "browserTarget": "kid-sleeper:build:production"
